--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,4 +1,5 @@
 FROM orchardup/php5
-ADD code /code/
+ADD code/wordpress/ /code
+#ADD code /code/
 #COPY wp-config.php /code/wp-config.php
 #COPY router.php /code/router.php
